install Uniswap v3-core (0.8 branch)

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,5 @@
 [submodule "lib/v3-core"]
 	path = lib/v3-core
 	url = https://github.com/uniswap/v3-core
+[submodule "/Users/admin/Desktop/Code/Projects/Misc-DeFi-1/lib/v3-core"]
+	branch = 0.8
