--- a/.gitmodules
+++ b/.gitmodules
@@ -6,3 +6,6 @@
 	url = https://github.com/uniswap/v3-core
 [submodule "/Users/admin/Desktop/Code/Projects/Misc-DeFi-1/lib/v3-core"]
 	branch = 0.8
+[submodule "lib/v3-periphery"]
+	path = lib/v3-periphery
+	url = https://github.com/uniswap/v3-periphery
