--- a/foundry.toml
+++ b/foundry.toml
@@ -5,4 +5,6 @@ libs = ['lib']
 
 solc_version = '0.8.17'
 
+via_ir = false
+
 # See more config options https://github.com/foundry-rs/foundry/tree/master/config
