forge install: solidity-trigonometry

--- a/.gitmodules
+++ b/.gitmodules
@@ -18,3 +18,6 @@
 	path = lib/prb-math
 	url = https://github.com/paulrberg/prb-math
 	branch = v3.3.0
+[submodule "lib/solidity-trigonometry"]
+	path = lib/solidity-trigonometry
+	url = https://github.com/mds1/solidity-trigonometry
